organize file system

--- a/submit.html
+++ b/submit.html
@@ -30,7 +30,7 @@
 		
 		<table id="navigationTable">
 			<tr>
-				<td class="navtd" ><a href="index.php" >Gallery</a></td>
+				<td class="navtd" ><a href="index.html" >Gallery</a></td>
 				<td class="navtd" ><a href="about.html" >About</a></td>
 				<td class="navtd" ><a href="contact.html" >Contact</a></td>
 			</tr>
