--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 		
 		<table id="navigationTable">
 			<tr>
-				<td class="navtd" ><a href="index.php" >Gallery</a></td>
+				<td class="navtd" ><a href="index.html" >Gallery</a></td>
 				<td class="navtd" ><a href="submit.html" >Submit art</a></td>
 				<td class="navtd" ><a href="contact.html" >Contact</a></td>
 			</tr>
