migrate styles to css file

--- a/about.html
+++ b/about.html
@@ -7,19 +7,7 @@
 		<meta name="author" content="Damjan Roškar">
 		<title>Depth Perception - About</title>
 		<link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
-		<style>
-			body{ background-color:#000000; }
-			h1{ color:#EFDFAF; text-align:center; font-family:"VT323",cursive; font-size:42px; }
-			hr{ border-color:#DFBF5F; }
-			a:link { color:#EFDFAF; }
-			a:visited { color:#EFDFAF; }
-			a{ text-decoration:none; }
-			.navtd{ width:100px; }
-			.marg{ margin-left:20px; margin-right:20px; }
-			#navigationTable{ margin-left:auto; margin-right: auto; text-align: center; color:#EFDFAF; font-family:"VT323",cursive; font-size:24px; }
-			p{ color:#EFDFAF; font-family:"VT323",cursive; font-size:20px }
-			#footer{ color:#EFDFAF; position: fixed; bottom: 0; width:100% }
-		</style>
+		<link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
 	
 	<body>
@@ -40,10 +28,9 @@
 			<br/>Anyone who wants to try themselves at this kind of art is welcome to submit their work to be displayed in the gallery.
 		</p>
 		
-		<div id="footer" >
-			<hr>
-			Copyright 2013 Damjan Roškar. All rights reserved.
-		</div>
+		<br />
+		<br />
+		<br />
 	</body>
 	
 </html>
