--- a/contact.html
+++ b/contact.html
@@ -7,21 +7,7 @@
 		<meta name="author" content="Damjan Roškar">
 		<title>Depth Perception - Contact</title>
 		<link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
-		<style>
-			body{ background-color:#000000; }
-			h1{ color:#EFDFAF; text-align:center; font-family:"VT323",cursive; font-size:42px; }
-			hr{ border-color:#DFBF5F; }
-			a:link { color:#EFDFAF; }
-			a:visited { color:#EFDFAF; }
-			a{ text-decoration:none; }
-			.navtd{ width:100px; }
-			.marg{ margin-left:20px; margin-right:20px; }
-			#link{ color:#DFBF5F; }
-			#mark{ color:#DFBF5F; }
-			#navigationTable{ margin-left:auto; margin-right: auto; text-align: center; color:#EFDFAF; font-family:"VT323",cursive; font-size:24px; }
-			p{ color:#EFDFAF; font-family:"VT323",cursive; font-size:20px }
-			#footer{ color:#EFDFAF; position: fixed; bottom: 0; width:100% }
-		</style>
+		<link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
 	
 	<body>
@@ -38,18 +24,12 @@
 		<br>
 		
 		<p class="marg" >
-			Feel free to contact me about anything at <span id="mark" >damjan.roskar.s@gmail.com</span>.
-			<br />
-			Click <a id="link" href="mailto:damjan.roskar.s@gmail.com?subject=Depth Perception - <insert subject>">here</a> to launch your email management program.
+			Feel free to contact me about anything at <a id="link" href="mailto:damjan.roskar.s@gmail.com?subject=Depth Perception - <insert subject>">damjan.roskar.s@gmail.com</a>.
 		</p>
 		
-		<div id="footer" >
-
-			<br>
-			<br>
-			<hr>
-			Copyright 2013 Damjan Roškar. All rights reserved.
-		</div>
+		<br />
+		<br />
+		<br />
 		
 	</body>
 	
