--- a/index.html
+++ b/index.html
@@ -8,25 +8,7 @@
 		<meta name="author" content="Damjan Roškar">
 		<title>Depth Perception - Art with depth... literally</title>
 		<link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
-		<style>
-			body{ background-color:#000000; }
-			h1{ color:#EFDFAF; text-align:center; font-family:"VT323",cursive; font-size:42px; }
-			hr{ border-color:#DFBF5F; }
-			.tableText { width:341px; text-align:center; color:#EFDFAF; font-family:"VT323",cursive; font-size:24px; }
-			.personals { color:#DFBF5F; }
-			a:link { color:#EFDFAF; }
-			a:visited { color:#EFDFAF; }
-			a{ text-decoration:none; }
-			.navtd{ width:100px; }
-			#personalUrl { color:#DFBF5F; color:#DFBF5F; border-bottom:2px solid #DFBF5F; }
-			#navigationTable{ margin-left:auto; margin-right: auto; text-align: center; color:#EFDFAF; font-family:"VT323",cursive; font-size:24px; }
-			#footer{ color:#EFDFAF; }
-			#canvasDiv{ width:1394px; margin-left:auto; margin-right:auto; }
-			#AL{ margin-top:auto; margin-bottom:auto; margin-right:20px; }
-			#AR{ margin-top:auto; margin-bottom:auto; margin-left:20px; }
-			#shareDiv { text-align:center; margin-top:50px; color:#EFDFAF; font-family:"VT323",cursive; font-size:24px; }
-			#textBoxShare { background-color:#000000; border: 1px solid #EFDFAF; width:240px; color:#EFDFAF; border-radius:3px; text-align:center; }
-		</style>
+		<link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
 
 	<body>
@@ -70,13 +52,9 @@
 					<td></td>
 				</tr>
 			</table>
-		</div>
-		<div id="footer" >
-
-			<br>
-			<br>
-			<hr>
-			by <a href="http://www.damjanroskar.com">D. Roskar</a>
+			<br />
+			<br />
+			<br />
 		</div>
 		
 		<?php
