--- a/submit.html
+++ b/submit.html
@@ -7,22 +7,7 @@
 		<meta name="author" content="Damjan Roškar" />
 		<title>Depth Perception - Submit your art</title>
 		<link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css' />
-		<style>
-			body { background-color:#000000; }
-			h1 { color:#EFDFAF; text-align:center; font-family:"VT323",cursive; font-size:42px; }
-			h2 { color:#EFDFAF; font-family:"VT323",cursive; font-size:31px; }
-			hr{ border-color:#DFBF5F; }
-			a:link { color:#EFDFAF; }
-			a:visited { color:#EFDFAF; }
-			a{ text-decoration:none; }
-			.navtd{ width:100px; }
-			.marg{ margin-left:20px; margin-right:20px; }
-			#navigationTable{ margin-left:auto; margin-right: auto; text-align: center; color:#EFDFAF; font-family:"VT323",cursive; font-size:24px; }
-			p{ color:#EFDFAF; font-family:"VT323",cursive; font-size:20px }
-			ul{ color:#EFDFAF; font-family:"VT323",cursive; font-size:20px }
-			span{ display:block; color:#DFBF5F; text-align:center; font-family:"VT323",cursive; font-size:31px }
-			#footer{ color:#EFDFAF; }
-		</style>
+		<link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
 	
 	<body>
@@ -86,16 +71,13 @@
 			</ul>
 			<br />
 		
-		<a href="testTool.html" target="testTool" ><span id="submit" >[TEST YOUR ART]</span></a>
+		<a href="testTool.html" target="testTool" ><span id="submit" class="center_text_button" >[TEST YOUR ART]</span></a>
 		<br>
-		<a href="contact.html" ><span id="submit" >[SUBMIT YOUR ART]</span></a>
+		<a href="contact.html" ><span id="submit" class="center_text_button" >[SUBMIT YOUR ART]</span></a>
 		
-		<div id="footer" >
-			<br />
-			<br />
-			<hr />
-			Copyright 2013 Damjan Roškar. All rights reserved.
-		</div>
+		<br />
+		<br />
+		<br />
 	</body>
 	
 </html>
