add mouseover instruction

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<table>
 				<tr>
 					<td><img id="AL" src="images/arrowL.jpg" alt="ArrowLeft"></td>
-					<td><canvas id="MyCanvas" width="1024" height="576"></canvas></td>
+					<td><canvas id="canvas" width="1024" height="576"></canvas></td>
 					<td><img id="AR" src="images/arrowR.jpg" alt="ArrowRight"></td>
 				</tr>
 				<tr>
