organize retrieved data; wait for images to load; init draw

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<br />
 			<br />
 		</div>
-		
+		<script src="script/settings.js"></script>
 		<script src="script/main.js"></script>
 	</body>
 </html>
