display image info

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 					<td></td>
 					
 					<td>
-						<table id="innerTable">
+						<table id="infotable">
 							<tr >
-								<td class="tableText" >Title: <span id="title" class="personals" ></span></td>
-								<td class="tableText" >Author: <span id="author" class="personals" ></span></td>
-								<td class="tableText" >Website: <a id="personalUrl" class="link" ><span  id="website" class="personals" ></span></a></td>
+								<td id="title"></td>
+								<td id="by" class="tableText" >by: </td>
+								<td id="author"></td>
 							</tr>
 						</table>
 					</td>
