clear submit page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="art, depth, perception, art with depth, moving, images, pixelart, depth perception, depthperception">
 		<meta name="description" content="A collection of art that shows depth when moved over with a mouse">
 		<meta name="author" content="Damjan Roškar">
-		<title>Depth Perception - Art with depth... literally</title>
+		<title>Depth Perception</title>
 		
 		<!-- font -->
 		<link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
@@ -59,10 +59,10 @@
 		<br />
 		<br />
 		<table id="navigationTable">
-		<tr>
-			<td class="navtd"><button id="submitButton">submit</button></td>
-			<td class="navtd"><button id="contactButton">contact</button></td>
-		</tr>
+			<tr>
+				<td class="navtd"><button id="submitButton">submit</button></td>
+				<td class="navtd"><button id="contactButton">contact</button></td>
+			</tr>
 		</table>
 		<br />
 		<script src="script/settings.js"></script>
