--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</tr>
 			<tr>
 				<td><img id="AL" src="images/l.svg" alt="ArrowLeft"></td>
-				<td id="canvas_row"><canvas id="canvas" width="100" height="100"></canvas></td>
+				<td id="canvas_cell"><canvas id="canvas" width="100" height="100"></canvas></td>
 				<td><img id="AR" src="images/r.svg" alt="ArrowRight"></td>
 			</tr>
 			<tr>
