--- a/submit.html
+++ b/submit.html
@@ -20,7 +20,13 @@
 	
 	<body>
 		<br />
-				
+		<table id="mainTable">
+			<tr>
+				<td></td>
+				<td id="canvas_cell"><canvas id="canvas" width="100" height="100"></canvas></td>
+				<td></td>
+			</tr>
+		</table>
 		<br />
 		<br />
 		<table id="navigationTable">
