migrate data access to separate module

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 		</table>
 		<br />
 		<script src="script/settings.js"></script>
-		<script src="script/main.js"></script>
+		<script src="script/modules/data_access.js"></script>
+		<script src="script/gallery.js"></script>
 	</body>
 </html>
