--- a/submit.html
+++ b/submit.html
@@ -37,6 +37,7 @@
 		</table>
 		<br />
 		<script src="script/settings.js"></script>
+		<script src="script/modules/data_access.js"></script>
 		<script src="script/submit.js"></script>
 	</body>
 	
