--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</tr>
 			<tr>
 				<td><img id="AL" src="images/l.svg" alt="ArrowLeft"></td>
-				<td id="canvas_cell"><canvas id="canvas" width="100" height="100"></canvas></td>
+				<td id="canvas_cell"><canvas id="canvas" width="250" height="200"></canvas></td>
 				<td><img id="AR" src="images/r.svg" alt="ArrowRight"></td>
 			</tr>
 			<tr>
@@ -66,6 +66,8 @@
 		</table>
 		<br />
 		<script src="script/settings.js"></script>
+		<script src="script/modules/tools.js"></script>
+		<script src="script/modules/canvas_control.js"></script>
 		<script src="script/modules/data_access.js"></script>
 		<script src="script/gallery.js"></script>
 	</body>
