--- a/submit.html
+++ b/submit.html
@@ -23,7 +23,7 @@
 		<table id="mainTable">
 			<tr>
 				<td></td>
-				<td id="canvas_cell"><canvas id="canvas" width="100" height="100"></canvas></td>
+				<td id="canvas_cell"><canvas id="canvas" width="250" height="200"></canvas></td>
 				<td></td>
 			</tr>
 		</table>
@@ -37,6 +37,8 @@
 		</table>
 		<br />
 		<script src="script/settings.js"></script>
+		<script src="script/modules/tools.js"></script>
+		<script src="script/modules/canvas_control.js"></script>
 		<script src="script/modules/data_access.js"></script>
 		<script src="script/submit.js"></script>
 	</body>
