create keyboard module

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 		<br />
 		<script src="script/settings.js"></script>
 		<script src="script/modules/tools.js"></script>
+		<script src="script/modules/keyboard.js"></script>
 		<script src="script/modules/canvas_control.js"></script>
 		<script src="script/modules/data_access.js"></script>
 		<script src="script/gallery.js"></script>
