create basic submission form layout

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<td></td>
 				<td class="centerTd">
 					<span class="text">share: </span>
-					<input id="textBoxShare" type="text" onfocus="this.select()" onMouseUp="return false" value="" >
+					<input id="textBoxShare" class="textBox" type="text" onfocus="this.select()" onMouseUp="return false" value="" >
 					<button id="copyButton">copy</button>
 				</td>
 				<td></td>
