create toggle and disabled button styles

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<td class="centerTd">
 					<span class="text">share: </span>
 					<input id="textBoxShare" class="textBox" type="text" onfocus="this.select()" onMouseUp="return false" value="" >
-					<button id="copyButton">copy</button>
+					<button id="copyButton" class="big" >copy</button>
 				</td>
 				<td></td>
 			</tr>
@@ -60,8 +60,8 @@
 		<br />
 		<table id="navigationTable">
 			<tr>
-				<td class="navtd"><button id="submitButton">submit</button></td>
-				<td class="navtd"><button id="contactButton">contact</button></td>
+				<td class="navtd"><button id="submitButton" class="big" >submit</button></td>
+				<td class="navtd"><button id="contactButton" class="big" >contact</button></td>
 			</tr>
 		</table>
 		<br />
