implement radio toggling

--- a/submit.html
+++ b/submit.html
@@ -45,16 +45,16 @@
 					<hr>
 					<span class="settingsTitle" >canvas size</span>
 					<br />
-					<button id="defaultButton" class="toggled small" >default (1024x576)</button>
+					<button id="defaultButton" class="toggled small" >default</button>
 					<br />
 					<button id="autoButton" class="untoggled small" >auto</button>
 					<br />
 					<button id="customButton" class="untoggled small" >custom</button>
 					<hr>
 					<button id="testButton" class="big">test</button>
-					<button id="adjustButton" class="untoggled big">adjust</button>
+					<button id="adjustButton" class="untoggled big disabled" disabled>adjust</button>
 					<br />
-					<button id="submitButton" class="big important disabled" >submit</button>
+					<button id="submitButton" class="big important disabled" disabled>submit</button>
 				</td>
 				<td id="canvas_cell"><canvas id="canvas" class="submitCanvas" width="1024" height="576"></canvas></td>
 				<td></td>
