show size input fields when custom button is toggled

--- a/submit.html
+++ b/submit.html
@@ -50,6 +50,9 @@
 					<button id="autoButton" class="untoggled small" >auto</button>
 					<br />
 					<button id="customButton" class="untoggled small" >custom</button>
+					<div id="customSizeDiv">
+						<input id="sizeXTb" type="text" class="textBox sizetb" ></input> x <input id="sizeYTb" type="text" class="textBox sizetb" ></input>
+					</div>
 					<hr>
 					<button id="testButton" class="big">test</button>
 					<button id="adjustButton" class="untoggled big disabled" disabled>adjust</button>
