fix chrome form alignment

--- a/submit.html
+++ b/submit.html
@@ -42,6 +42,7 @@
 					<input id="l9tb" class="textBox urltb" type="text" placeholder="layer 9 image url"></input>
 					<br />
 					<input id="l10tb" class="textBox urltb" type="text" placeholder="layer 10 image url"></input>
+					<br />
 					<hr>
 					<span class="settingsTitle" >canvas size</span>
 					<br />
@@ -50,9 +51,11 @@
 					<button id="autoButton" class="untoggled small" >auto</button>
 					<br />
 					<button id="customButton" class="untoggled small" >custom</button>
-					<div id="customSizeDiv">
+					<br>
+					<span id="customSizeInput">
 						<input id="sizeXTb" type="text" class="textBox sizetb" ></input> x <input id="sizeYTb" type="text" class="textBox sizetb" ></input>
-					</div>
+					</span>
+					<br>
 					<hr>
 					<button id="testButton" class="big">test</button>
 					<button id="adjustButton" class="untoggled big disabled" disabled>adjust</button>
