select input text on click

--- a/submit.html
+++ b/submit.html
@@ -27,25 +27,25 @@
 		<table id="mainTable">
 			<tr>
 				<td class="centerTd">
-					<input id="l1tb" class="textBox urltb" type="text" placeholder="layer 1 image url"></input>
+					<input id="l1tb" class="textBox urltb" type="text" placeholder="layer 1 image url" onfocus="this.select()" ></input>
 					<br />
-					<input id="l2tb" class="textBox urltb" type="text" placeholder="layer 2 image url"></input>
+					<input id="l2tb" class="textBox urltb" type="text" placeholder="layer 2 image url" onfocus="this.select()" ></input>
 					<br />
-					<input id="l3tb" class="textBox urltb" type="text" placeholder="layer 3 image url"></input>
+					<input id="l3tb" class="textBox urltb" type="text" placeholder="layer 3 image url" onfocus="this.select()" ></input>
 					<br />
-					<input id="l4tb" class="textBox urltb" type="text" placeholder="layer 4 image url"></input>
+					<input id="l4tb" class="textBox urltb" type="text" placeholder="layer 4 image url" onfocus="this.select()" ></input>
 					<br />
-					<input id="l5tb" class="textBox urltb" type="text" placeholder="layer 5 image url"></input>
+					<input id="l5tb" class="textBox urltb" type="text" placeholder="layer 5 image url" onfocus="this.select()" ></input>
 					<br />
-					<input id="l6tb" class="textBox urltb" type="text" placeholder="layer 6 image url"></input>
+					<input id="l6tb" class="textBox urltb" type="text" placeholder="layer 6 image url" onfocus="this.select()" ></input>
 					<br />
-					<input id="l7tb" class="textBox urltb" type="text" placeholder="layer 7 image url"></input>
+					<input id="l7tb" class="textBox urltb" type="text" placeholder="layer 7 image url" onfocus="this.select()" ></input>
 					<br />
-					<input id="l8tb" class="textBox urltb" type="text" placeholder="layer 8 image url"></input>
+					<input id="l8tb" class="textBox urltb" type="text" placeholder="layer 8 image url" onfocus="this.select()" ></input>
 					<br />
-					<input id="l9tb" class="textBox urltb" type="text" placeholder="layer 9 image url"></input>
+					<input id="l9tb" class="textBox urltb" type="text" placeholder="layer 9 image url" onfocus="this.select()" ></input>
 					<br />
-					<input id="l10tb" class="textBox urltb" type="text" placeholder="layer 10 image url"></input>
+					<input id="l10tb" class="textBox urltb" type="text" placeholder="layer 10 image url" onfocus="this.select()" ></input>
 					<br />
 					<hr>
 					<span class="settingsTitle" >canvas size</span>
