improve navigation footer

--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
 				</td>
 				<td></td>
 			</tr>
-		</table>
-		<br />
-		<br />
-		<table id="navigationTable">
 			<tr>
-				<td class="navtd"><button id="submitButton" class="big" >submit</button></td>
-				<td class="navtd"><button id="contactButton" class="big" >contact</button></td>
+				<td class="navtd" colspan="3">
+					<hr>
+					<button id="navSubmitButton" class="big" >submit</button>
+					<button id="navContactButton" class="big" >contact</button>
+				</td>
 			</tr>
 		</table>
 		<br />
