--- a/submit.html
+++ b/submit.html
@@ -69,15 +69,12 @@
 				<td id="canvas_cell"><canvas id="canvas" class="submitCanvas" width="1024" height="576"></canvas></td>
 				<td></td>
 			</tr>
-		</table>
-		<br />
-		<br />
-		<br />
-		<br />
-		<table id="navigationTable">
 			<tr>
-				<td class="navtd" ><button id="galleryButton" class="big" >gallery</button></td>
-				<td class="navtd" ><button id="contactButton" class="big" >contact</button></td>
+				<td class="navtd" colspan="3">
+					<hr>
+					<button id="navGalleryButton" class="big" >gallery</button>
+					<button id="navContactButton" class="big" >contact</button>
+				</td>
 			</tr>
 		</table>
 		
