enable image adjustment - interface only

--- a/submit.html
+++ b/submit.html
@@ -28,24 +28,34 @@
 			<tr>
 				<td class="centerTd">
 					<input id="l1tb" class="textBox urltb" type="text" placeholder="layer 1 image url" onfocus="this.select()" ></input>
+					<button id="adjust1Button" class="untoggled small adjustButton" >adjust layer 1</button>
 					<br />
 					<input id="l2tb" class="textBox urltb" type="text" placeholder="layer 2 image url" onfocus="this.select()" ></input>
+					<button id="adjust2Button" class="untoggled small adjustButton" >adjust layer 2</button>
 					<br />
 					<input id="l3tb" class="textBox urltb" type="text" placeholder="layer 3 image url" onfocus="this.select()" ></input>
+					<button id="adjust3Button" class="untoggled small adjustButton" >adjust layer 3</button>
 					<br />
 					<input id="l4tb" class="textBox urltb" type="text" placeholder="layer 4 image url" onfocus="this.select()" ></input>
+					<button id="adjust4Button" class="untoggled small adjustButton" >adjust layer 4</button>
 					<br />
 					<input id="l5tb" class="textBox urltb" type="text" placeholder="layer 5 image url" onfocus="this.select()" ></input>
+					<button id="adjust5Button" class="untoggled small adjustButton" >adjust layer 5</button>
 					<br />
 					<input id="l6tb" class="textBox urltb" type="text" placeholder="layer 6 image url" onfocus="this.select()" ></input>
+					<button id="adjust6Button" class="untoggled small adjustButton" >adjust layer 6</button>
 					<br />
 					<input id="l7tb" class="textBox urltb" type="text" placeholder="layer 7 image url" onfocus="this.select()" ></input>
+					<button id="adjust7Button" class="untoggled small adjustButton" >adjust layer 7</button>
 					<br />
 					<input id="l8tb" class="textBox urltb" type="text" placeholder="layer 8 image url" onfocus="this.select()" ></input>
+					<button id="adjust8Button" class="untoggled small adjustButton" >adjust layer 8</button>
 					<br />
 					<input id="l9tb" class="textBox urltb" type="text" placeholder="layer 9 image url" onfocus="this.select()" ></input>
+					<button id="adjust9Button" class="untoggled small adjustButton" >adjust layer 9</button>
 					<br />
 					<input id="l10tb" class="textBox urltb" type="text" placeholder="layer 10 image url" onfocus="this.select()" ></input>
+					<button id="adjust10Button" class="untoggled small adjustButton" >adjust layer 10</button>
 					<br />
 					<hr>
 					<span class="settingsTitle" >canvas size</span>
