add 'more info' button to submission form

--- a/submit.html
+++ b/submit.html
@@ -81,6 +81,13 @@
 			</tr>
 			<tr>
 				<td class="navtd" colspan="3">
+					<button id="moreInfo" class="small" >?</button>
+					<div id="submissionInfo">
+						<p>
+							Here, you can submit stuff to the website by providing direct links to images into the input boxes above.<br />
+							Please consider using a reliable image hosting site like <a href="http://imgur.com/">imgur</a>.<br />
+						</p>
+					</div>
 					<hr>
 					<button id="navGalleryButton" class="big" >gallery</button>
 					<button id="navContactButton" class="big" >contact</button>
