--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<td></td>
 				<td class="centerTd">
 					<span class="text">share: </span>
-					<input id="textBoxShare" class="textBox" type="text" onfocus="this.select()" onMouseUp="return false" value="" >
+					<input id="textBoxShare" class="textBox" type="text" onfocus="this.select()" onMouseUp="return false" value="" ></input>
 					<button id="copyButton" class="big" >copy</button>
 				</td>
 				<td></td>
