--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,9 @@
 		<!-- jQuery -->
 		<script src="libraries/jquery-1.12.0.min.js"></script>
 		
+		<!-- reCaptcha API -->
+		<script src='https://www.google.com/recaptcha/api.js'></script>
+		
 	</head>
 	
 	<body>
@@ -27,6 +30,9 @@
 				<span id="messageLabel" class="settingsTitle">Your message:</span><br />
 				<textarea id="textAreaMessage" rows="15" cols="80" maxlength="500"></textarea><br />
 				<button id="sendButton" class="big important">send</button>
+				<div id="captchaContainer">
+					<div class="g-recaptcha" data-sitekey="6LesBxoTAAAAAJ1oc9iRyTYK5yRQcMLUs7H-LnZB" data-callback="captchaComplete"></div>
+				</div>
 				</td>
 			</tr>
 			<tr>
