improve contact form

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 			<tr>
 				<td>
 				<span id="emailLabel" class="settingsTitle">Enter your email if you want a reply:</span><br />
-				<input id="textBoxMail" class="textBox" type="text" placeholder="youremail@gmail.com" maxlength="50"></input><br />
+				<input id="textBoxMail" class="textBox" type="text" placeholder="name / subject / youremail@pyongyang.nk" maxlength="80"></input><br />
 				<span id="messageLabel" class="settingsTitle">Your message:</span><br />
 				<textarea id="textAreaMessage" rows="15" cols="80" maxlength="500"></textarea><br />
 				<button id="sendButton" class="big important">send</button>
